--- a/systemtarjeta/app/views/layouts/application.html.erb
+++ b/systemtarjeta/app/views/layouts/application.html.erb
@@ -8,7 +8,14 @@
 </head>
 <body>
 
+  <% flash.each do |key, value| %>
+      <div class="alert alert-<%= key %> alert-info">
+          <button type="button" class="close" data-dismiss="alert" aria-hidden="true">x</button>
+          <%= value %>
+      </div>
+  <% end %>
 <%= yield %>
+
 
 </body>
 </html>
