--- a/systemtarjeta/app/views/welcome_sys_t/index.html.erb
+++ b/systemtarjeta/app/views/welcome_sys_t/index.html.erb
@@ -1,5 +1,11 @@
 <head>    <title>New Age - Start Bootstrap Theme</title>
 
+-- PENDIENTE COMPROBACION DE ROL:
+ --- Si es ADMIN cargar boton Herramienta.
+    --- SHOW user
+    --- Premios
+    ---- Tiendas
+
 
       <!-- Bootstrap Core CSS -->
       <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
