--- a/systemtarjeta/app/views/inicio_usuario/index.html.erb
+++ b/systemtarjeta/app/views/inicio_usuario/index.html.erb
@@ -60,8 +60,9 @@
     </div>
     <div id="collapse1" class="panel-collapse collapse in">
       <div class="panel-body">
-        <table>
-    <thead>
+        <div class="container">
+<table class="table table-striped">
+      <thead>
       <tr>
         <th>Nombre</th>
         <th>Apellidos</th>
@@ -85,7 +86,7 @@
         </tr>
 
     </tbody>
-  </table>
+  </table></div>
   <%= link_to 'Editar perfil', edit_user_registration_path %>
       </div>
     </div>
@@ -95,70 +96,37 @@
       <h4 class="panel-title">
         <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
        Mi tarjeta</a>
-
       </h4>
     </div>
     <div id="collapse2" class="panel-collapse collapse">
-      <div class="panel-body">- Dar de bajan
-      - Alta tarjeta
-      - Datos Tarjeta</div>
-    </div>
-  </div>
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
-       Mis Premios</a>
-      </h4>
-    </div>
-    <div id="collapse3" class="panel-collapse collapse">
       <div class="panel-body">
-      -Listado de premios conseguidos</div>
+        <%= render "tarjeta/index", user: current_user %>
+        -- Pendiente genear boton y quitar el Link
+       </div>
     </div>
   </div>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
+          Mis Movimientos</a>
+        </h4>
+      </div>
+      <div id="collapse1" class="panel-collapse collapse in">
+        <div class="panel-body">
+       <%= render "movimiento/index", user: current_user %>
 
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapse4">
-        Consultar Movimientos</a>
-      </h4>
-    </div>
-    <div id="collapse4" class="panel-collapse collapse">
-      <div class="panel-body">Mvimientos
-      - Excel</div>
-    </div>
-  </div>
-</div>
+    --- Queda pendiente la creacion de scaffold movimiento
+    ------ realizar el INDEX
+    ---------- Excel descarga Movimientos
 
 
-</div>
-
-    <footer>
-        <div class="container">
-            <p>&copy; 2016 Grupo13.</p>
-            <ul class="list-inline">
-                <li>
-                    <a href="#">Privacy</a>
-                </li>
-                <li>
-                    <a href="#">Terms</a>
-                </li>
-                <li>
-                    <a href="#">FAQ</a>
-                </li>
-            </ul>
         </div>
-    </footer>
+      </div>
+    </div>
+  </div>
+   </div>
+</div>
+</div>
 
-    <!-- jQuery -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-
-    <!-- Theme JavaScript -->
-    <script src="js/new-age.min.js"></script>
+------ Agregar foto y maquetacion final
