--- a/systemtarjeta/app/views/inicio_usuario/index.html.erb
+++ b/systemtarjeta/app/views/inicio_usuario/index.html.erb
@@ -61,18 +61,18 @@
     <div id="collapse1" class="panel-collapse collapse in">
       <div class="panel-body">
         <div class="container">
-<table class="table table-striped">
-      <thead>
-      <tr>
-        <th>Nombre</th>
-        <th>Apellidos</th>
-        <th>Direccion</th>
-        <th>Telefono</th>
-        <th>Email</th>
+          <table class="table table-striped">
+            <thead>
+            <tr>
+              <th>Nombre</th>
+              <th>Apellidos</th>
+              <th>Direccion</th>
+              <th>Telefono</th>
+              <th>Email</th>
 
-        <th colspan="3"></th>
-      </tr>
-    </thead>
+              <th colspan="3"></th>
+            </tr>
+          </thead>
 
     <tbody>
 
@@ -86,10 +86,11 @@
         </tr>
 
     </tbody>
-  </table></div>
+  </table>
   <%= link_to 'Editar perfil', edit_user_registration_path %>
       </div>
     </div>
+  </div>
   </div>
   <div class="panel panel-default">
     <div class="panel-heading">
@@ -101,30 +102,11 @@
     <div id="collapse2" class="panel-collapse collapse">
       <div class="panel-body">
         <%= render "tarjeta/index", user: current_user %>
-        -- Pendiente genear boton y quitar el Link
        </div>
     </div>
   </div>
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h4 class="panel-title">
-          <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
-          Mis Movimientos</a>
-        </h4>
+
       </div>
-      <div id="collapse1" class="panel-collapse collapse in">
-        <div class="panel-body">
-       <%= render "movimiento/index", user: current_user %>
-
-    --- Queda pendiente la creacion de scaffold movimiento
-    ------ realizar el INDEX
-    ---------- Excel descarga Movimientos
-
-
-        </div>
-      </div>
-    </div>
-  </div>
    </div>
 </div>
 </div>
