--- a/systemtarjeta/app/views/premios/_index.html.erb
+++ b/systemtarjeta/app/views/premios/_index.html.erb
@@ -1,25 +1,18 @@
 <table class="table table-striped">  <thead>
     <tr>
-      <th>NumeroReferencia</th>
+      <th>Nombre</th>
       <th>Puntos</th>
-      <th>Fecha Creacion</th>
-      <th>Fecha Baja</th>
-     </tr>
+      </tr>
   </thead>
 
   <tbody>
-    <% tarjets = Tarjetum.where(user_id: user.id) %>
+    <% premios = Premio.where(fecha_baja:nil) %>
 
-<% if tarjets.size  <= 0%>
-<td><%= link_to "Activar Tarjeta",  tarjetum_nueva_tarjeta_path(1), :class =>'btn btn-success', data: { confirm: '¿Seguro que desea activar la tarjeta?'} %></td>
 
- <% end %>
+ <% premios.each do |gift| %>
+<tr>      <td><%= gift.concepto %></td>
+      <td><%= gift.puntos %></td>
 
- <% tarjets.each do |tarj| %>
-<tr>      <td><%= tarj.numref %></td>
-      <td><%= tarj.puntos %></td>
-      <td><%= tarj.created_at %></td>
-      <td><%= tarj.fecha_baja %></td>
       <td>
     </td></tr>
 
