--- a/systemtarjeta/app/views/tiendas/_form.html.erb
+++ b/systemtarjeta/app/views/tiendas/_form.html.erb
@@ -23,9 +23,10 @@
     <%= f.label :url %><br>
     <%= f.text_field :url %>
   </div>
+ 
   <div class="field">
-    <%= f.label :fecha_baja %><br>
-    <%= f.date_select :fecha_baja %>
+    <%= f.label :photo %><br>
+    <%= f.text_field :photo %>
   </div>
   <div class="actions">
     <%= f.submit %>
