--- a/systemtarjeta/app/views/welcome_sys_t/index.html.erb
+++ b/systemtarjeta/app/views/welcome_sys_t/index.html.erb
@@ -57,16 +57,16 @@
     <ul class="nav navbar-nav navbar-right">
       <li class="active"><%= link_to "Home", root_path %> </li>
       <% if current_user %>
+      <% if current_user.rol == 'admin'%>
+      <li class="active"><%= link_to "Panel Admin", zona_admin_index_path %> </li>
 
+      <%end%>
     <li>   <%= link_to 'Welcome ' + current_user.nombre, inicio_usuario_index_path %></li>
     <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
 <% else %>
   <li>  <%= link_to 'Login', new_user_session_path %></li>
 <% end %>
-<% if current_user.rol = 'admin'%>
-<li class="active"><%= link_to "Panel Admin", root_path %> </li>
 
-<%end%>
 
 <li><a href="#">Contacto</a></li>
 <li><a href="#">Ayuda</a></li>
@@ -99,141 +99,14 @@
           </div>
     </div>
     <br/>
+  <%= link_to (image_tag "stores.PNG"), tiendas_path %>
+  <%= link_to (image_tag "premios.PNG"), premios_path %>
 
-    <div class="container">
-      <div class="well well-sm">
-      <ul class="nav nav-pills nav-justified" data-tabs id="example-tabs">
-      <li class="tabs-title is-active"><a href="#panel1">Home</a></li>
-      <li class="tabs-title"><a href="#panel2">Tiendas Adheridas</a></li>
-      <li class="tabs-title"><a href="#panel3">Premios</a></li>
-      <li class="tabs-title"><a href="#panel3">Noticias</a></li>
 
-    </ul>
+
 </div>
-    <div class="tabs-content" data-tabs-content="example-tabs">
-      <div class="tabs-panel is-active" id="panel2">
-        <%= render "tiendas/index", user: current_user %>
-
-      </div>
-      <div class="tabs-panel" id="panel3">
-        <%= render "premios/index", user: current_user %>
-
-      </div>
-
-      <div class="tabs-panel" id="panel3">
-      </div>
-
-      </div>
-    </div>
-    </div>
-
-
-    <section id="download" class="download bg-primary text-center">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8 col-md-offset-2">
-                    <h2 class="section-heading">Discover what all the buzz is about!</h2>
-                    <p>Our app is available on any mobile device! Download now to get started!</p>
-                    <div class="badges">
-                        <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
-                        <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="features" class="features">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <div class="section-heading">
-                        <h2>Unlimited Features, Unlimited Fun</h2>
-                        <p class="text-muted">Check out what you can do with this app theme!</p>
-                        <hr>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="device-container">
-                        <div class="device-mockup iphone6_plus portrait white">
-                            <div class="device">
-                                <div class="screen">
-                                    <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                                    <img src="img/demo-screen-1.jpg" class="img-responsive" alt=""> </div>
-                                <div class="button">
-                                    <!-- You can hook the "home button" to some JavaScript events or just remove it -->
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-8">
-                    <div class="container-fluid">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="feature-item">
-                                    <i class="icon-screen-smartphone text-primary"></i>
-                                    <h3>Device Mockups</h3>
-                                    <p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="feature-item">
-                                    <i class="icon-camera text-primary"></i>
-                                    <h3>Flexible Use</h3>
-                                    <p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="feature-item">
-                                    <i class="icon-present text-primary"></i>
-                                    <h3>Free to Use</h3>
-                                    <p class="text-muted">As always, this theme is free to download and use for any purpose!</p>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="feature-item">
-                                    <i class="icon-lock-open text-primary"></i>
-                                    <h3>Open Source</h3>
-                                    <p class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-    </section>
-
-    <section class="cta">
-        <div class="cta-content">
-            <div class="container">
-                <h2>Stop waiting.<br>Start building.</h2>
-                <a href="#contact" class="btn btn-outline btn-xl page-scroll">Let's Get Started!</a>
-            </div>
-        </div>
-        <div class="overlay"></div>
-    </section>
-
-    <section id="contact" class="contact bg-primary">
-        <div class="container">
-            <h2>We <i class="fa fa-heart"></i> new friends!</h2>
-            <ul class="list-inline list-social">
-                <li class="social-twitter">
-                    <a href="#"><i class="fa fa-twitter"></i></a>
-                </li>
-                <li class="social-facebook">
-                    <a href="#"><i class="fa fa-facebook"></i></a>
-                </li>
-                <li class="social-google-plus">
-                    <a href="#"><i class="fa fa-google-plus"></i></a>
-                </li>
-            </ul>
-        </div>
-    </section>
+</div>
+</div>
 
     <footer>
         <div class="container">
