--- a/systemtarjeta/app/views/action_correo/sample_email_bajauser.html.erb
+++ b/systemtarjeta/app/views/action_correo/sample_email_bajauser.html.erb
@@ -6,23 +6,13 @@
   <body>
     <div class="container">
   <div class="jumbotron">
-    <h1>¡Bienvenido <%= @user.nombre %>!</h1>
-    <% card = Tarjetum.find_by(user_id: @user.id)%>
-    <h1>Numero Tarjeta <%= card.numref %>!</h1>
+    <h1>¡Solicitud de baja del usuario <%= @user.nombre %>!</h1>
 
-
-       <ol type="1">
-
-         <li>ACUMULA PUNTOS: Introduce tu numero de tarjeta al realizar una compra el cualquiera de nuestras tiendas
-           asociadas.</li>
-         <li>CANJEA PUNTOS POR REGALOS: Podras disfrutar de una selección de fantásticos premios.</li>
-         <li>RECIBIR NOVEDADES: Recibiras nuestras novedades e informacion sobre tus compras.</li>
-       </ol>
+    <h1>Id <%= @user.id %></h1>
+    <h1>Id <%= @user.email %></h1>
 
 
 
-       Gracias por unirte a Points4All.
-       Saludos.
 
 </div>
    </div>
