--- a/systemtarjeta/app/views/tiendas/edit.html.erb
+++ b/systemtarjeta/app/views/tiendas/edit.html.erb
@@ -32,7 +32,7 @@
     <div class="panel-heading">Editar Tienda</div>
     <div class="panel-body">
 
-<%= render 'formedit' %>
+<%= render 'form' %>
 
 <%= link_to 'Show', @tienda %> |
 <%= link_to 'Back', tiendas_path %>
