--- a/systemtarjeta/app/views/devise/registrations/edit.html.erb
+++ b/systemtarjeta/app/views/devise/registrations/edit.html.erb
@@ -43,7 +43,10 @@
         <%= f.text_field :telefono, autofocus: false %>
   </div>
 
-
+  <div class="field">
+     <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+     <%= f.password_field :current_password, autocomplete: "off" %>
+   </div>
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
