--- a/systemtarjeta/app/views/inicio_usuario/index.html.erb
+++ b/systemtarjeta/app/views/inicio_usuario/index.html.erb
@@ -57,6 +57,7 @@
 <h1>Hola <%= current_user.nombre %></h1>
 <h2>¿Que quieres hacer?</h2>
 
+
 <div class="panel-group" id="accordion">
   <div class="panel panel-default">
     <div class="panel-heading">
@@ -67,77 +68,80 @@
     </div>
     <div id="collapse1" class="panel-collapse collapse in">
       <div class="panel-body">
-        <div class="container">
-          <table class="table table-striped">
-            <thead>
-            <tr>
-              <th>Nombre</th>
-              <th>Apellidos</th>
-              <th>Direccion</th>
-              <th>Telefono</th>
-              <th>Email</th>
+        <table class="table table-striped">
+          <thead>
+          <tr>
+            <th>Nombre</th>
+            <th>Apellidos</th>
+            <th>Direccion</th>
+            <th>Telefono</th>
+            <th>Email</th>
 
-              <th colspan="3"></th>
-            </tr>
-          </thead>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
 
-    <tbody>
+  <tbody>
 
-        <tr>
-          <td><%= current_user.nombre %></td>
-          <td><%= current_user.apellidos %></td>
-          <td><%= current_user.direccion %></td>
-          <td><%= current_user.telefono %></td>
-          <td><%= current_user.email %></td>
+      <tr>
+        <td><%= current_user.nombre %></td>
+        <td><%= current_user.apellidos %></td>
+        <td><%= current_user.direccion %></td>
+        <td><%= current_user.telefono %></td>
+        <td><%= current_user.email %></td>
 
-        </tr>
+      </tr>
 
-    </tbody>
-  </table>
-  <%= link_to 'Editar perfil', edit_user_registration_path %>
-  <% if current_user.fecha_baja != nil%>
-  <%= link_to "Activar",  tarjetum_activaruser_path , :class =>'btn btn-success', data: { confirm: '¿Seguro que desea activar el usuario?'} %></td>
-<%else%>
-<%= link_to "Dar de baja",  tarjetum_des_user_path , :class =>'btn btn-success', data: { confirm: '¿Seguro que desea dar de baja el usuario?'} %></td>
-
-<%end%>
+  </tbody>
+</table>
+<%= link_to 'Editar perfil', edit_user_registration_path %>
       </div>
     </div>
   </div>
-  </div>
   <div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
-       Mi tarjeta</a>
-      </h4>
-    </div>
-    <div id="collapse2" class="panel-collapse collapse">
-      <div class="panel-body">
-        <%= render "tarjeta/index", user: current_user %>
-       </div>
-    </div>
-  </div>
-
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
-       Mis Movimientos</a>
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
+        Mis Movimientos</a>
       </h4>
     </div>
     <div id="collapse3" class="panel-collapse collapse">
       <div class="panel-body">
         <%= render "movimientos/index", user: current_user %>
+      </div>
+    </div>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
+        Mi Tarjeta</a>
+      </h4>
+    </div>
+    <div id="collapse2" class="panel-collapse collapse">
+      <div class="panel-body">
 
-       </div>
+      <%= render "tarjeta/index", user: current_user %>
+    </div>
+  </div>
     </div>
   </div>
 
+</div>
 
 
 
-      </div>
-   </div>
+
+
+
+
+
+
+
+
+
+
+    </div>
+ </div>
 </div>
 </div>
