--- a/systemtarjeta/app/views/tiendas/index.html.erb
+++ b/systemtarjeta/app/views/tiendas/index.html.erb
@@ -26,33 +26,52 @@
 <p id="notice"><%= notice %></p>
 <div class="container">
 
-<h1>Listing Tiendas</h1>
+<h1>Tiendas Adheridas</h1>
 
 <table class="table table-striped">
   <thead>
     <tr>
+      <th>Imagen</th>
       <th>Nombre</th>
       <th>Descripcion</th>
-      <th>Url</th>
+
+      <% if current_user %>
+     <% if current_user.rol == 'admin'%>
+     <th>Url</th>
       <th>Fecha baja</th>
+      <%end%>
+      <%end%>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
+    <% if current_user %>
+    <% if current_user.rol != 'admin'%>
+      <% @tiendas = Tienda.where(fecha_baja:nil) %>
+      <%else%>
+      <%@tiendas = Tienda.all%>
+      <%end%>
+<%end%>
     <% @tiendas.each do |tienda| %>
       <tr>
-        <td><%= image_tag tienda.photo%></td>
+        <td><%= image_tag tienda.photo,:class => "img-responsive"%></td>
         <td><%= tienda.nombre %></td>
         <td><%= tienda.descripcion %></td>
-        <td><%= tienda.url %></td>
+
+
          <% if current_user %>
         <% if current_user.rol == 'admin'%>
+          <td><%= tienda.url %></td>
+        <td><%= tienda.fecha_baja %></td>
+
         <td><%= link_to 'Ver', tienda %></td>
         <td><%= link_to 'Editar', edit_tienda_path(tienda) %></td>
         <td><%= link_to 'Dar de baja', tienda, method: :delete, data: { confirm: 'Estas seguro?' } %></td>
         <%end%>
         <%end%>
+        <td><%= link_to 'Visitar', tienda %></td>
+
       </tr>
     <% end %>
   </tbody>
@@ -61,8 +80,7 @@
 <br>
 <% if current_user %>
 <% if current_user.rol == 'admin'%>
-<%= link_to 'New Tienda', new_tienda_path %>
+<%= link_to 'Nueva Tienda', new_tienda_path %>
 <%end%>
 <%end%>
 </div>
-<%= image_tag 'indexFondo111.png' %>
