--- a/systemtarjeta/app/views/welcome_sys_t/index.html.erb
+++ b/systemtarjeta/app/views/welcome_sys_t/index.html.erb
@@ -1,10 +1,5 @@
 <head>    <title>New Age - Start Bootstrap Theme</title>
 
--- PENDIENTE COMPROBACION DE ROL:
- --- Si es ADMIN cargar boton Herramienta.
-    --- SHOW user
-    --- Premios
-    ---- Tiendas
 
 
       <!-- Bootstrap Core CSS -->
@@ -74,33 +69,10 @@
   </div>
 </nav>
 
-        <div class="background_image">
-          <div class="container">
-            <div class="jumbotron">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
+<%= image_tag "indexFondo.PNG",:class => "img-responsive" %>
 
-            </div>
-
-          </div>
-    </div>
-    <br/>
-  <%= link_to (image_tag "stores.PNG"), tiendas_path %>
-  <%= link_to (image_tag "premios.PNG"), premios_path %>
+  <%= link_to (image_tag "stores.PNG",:class => "img-responsive"), tiendas_path %>
+  <%= link_to (image_tag "premios.PNG",:class => "img-responsive"), premios_path %>
 
 
 
